fixed overflow issues on resize plugin-figmaFrame

--- a/site/src/Css/App.css
+++ b/site/src/Css/App.css
@@ -573,15 +573,17 @@ header .header__menu__icon {
   background: var(--clr-green);
   padding: var(--spacing-md);
   z-index: var(--z-top);
-  transform: translateX(100%);
+  visibility: hidden;
+  opacity: 0;
 }
 @media (prefers-reduced-motion: no-preference) {
   .header__nav {
-    transition: transform 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
   }
 }
 .header__nav.show {
-  transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
 }
 .header__nav__menu {
   display: flex;
@@ -594,8 +596,8 @@ header .header__menu__icon {
     position: unset;
     padding: unset;
     background: transparent;
-    transform: translateX(0);
-    transition: unset;
+    visibility: visible;
+    opacity: 1;
   }
   .header__nav .header__nav__menu {
     flex-direction: row;
